# CMake_Project_Template

./: .gitignore  CMakeLists.txt  README.MD
presets/: flecsCMake.txt
presets/base/: CMakeLists.txt  initc.sh  initcpp.sh
presets/flecs/: CMakeLists.txt  initc.sh  initcpp.sh  libraries.txt  main.c  main.cpp  project.md
presets/flecs-sdl2/: CMakeLists.txt  libraries.txt  main.c  main.cpp  project.md
presets/freeglut/: CMakeLists.txt  freeglutCMake.txt  libraries.txt  main.c  main.cpp  project.md
presets/sdl2/: CMakeLists.txt  libraries.txt  main.c  main.cpp  project.md
scripts/: init.sh
